# envdo

./: README.md  README_zh.md  pyproject.toml
envdo/: __init__.py  cli.py  config.json  envdo.py  utils.py
erun/: erun.json  erun.py  test.py  utils.py
