[project]
name = "envdo"
version = "0.1.3"
description = "Configure environment variables for Python code or command-line programs, providing dotenv management with group-based switching."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich>=14.2.0",
]

[project.urls]
repository = "https://github.com/NewToolAI/envdo"

[project.scripts]
envdo = "envdo.cli:main"
